tests/test_struct/bad/nested.catala_en
## Article

```catala
declaration structure S:
  data x content S

declaration scope A:
  context y content S

scope A:
  definition y equals S { -- x: 1 }
```
